--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -12,10 +11,11 @@
   </head>
   <body>
      <h1>Hello! This is the root domain for some projects.</h1>
+	 <p><a href="https://blog.hagota.net">Blog - Upcoming personal blog.</a></p>
      <p><a href="https://paste.hahota.net" class="a">Paste - Personal paste service.</a></p>
      <p><a href="https://ducky.hahota.net">Ducky - A Discord bot written with love.</a></p>
      <p><a href="https://jenkins.hahota.net">Jenkins - Self hosted build server for some projects.</a></p>
-     <h2>Tip: Click on a link to enter the site!<h2>
+     <h2>Tip: Click on a link to enter the site!</h2>
      <h2>This website looks like this on purpose. It's bloat free!</h2>
   </body>
 </html>
