--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
      <h1>Hello! This is the root domain for some projects.</h1>
-	 <p><a href="https://blog.hahota.net">Blog - Upcoming personal blog.</a></p>
+	 <p><a href="https://blog.hahota.net">Blog - Personal blog.</a></p>
      <p><a href="https://paste.hahota.net" class="a">Paste - Personal paste service.</a></p>
      <p><a href="https://ducky.hahota.net">Ducky - A Discord bot written with love.</a></p>
      <p><a href="https://jenkins.hahota.net">Jenkins - Self hosted build server for some projects.</a></p>
